<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dictionary_database_installation"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/WiFi_recommendation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/DarkOrange"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView_SD_free_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SD_free_memory"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_memory_requirement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_requirement"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
                
        <Button
            android:id="@+id/button_DownloadAndInstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Install"
            android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout_progress_bar"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <ProgressBar
            android:id="@+id/progressBar_downloading_unzipping"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />	    <TextView
	        android:id="@+id/textView_progressbar_message"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Downloading..."
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
</LinearLayout>